[tool.poetry]
name = "lexgrabber"
version = "0.1.0"
description = ""
authors = ["Major Hayden <major@mhtx.net>"]
readme = "README.md"
packages = [{include = "lexgrabber", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
pyarrow = "^13.0.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
ipython = "^8.15.0"
pytest-sugar = "^0.9.7"
pytest = "^7.4.2"
pytest-xdist = "^3.3.1"
pytest-cov = "^4.1.0"
pandas-stubs = "^2.0.0.230412"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
update_models = 'lexgrabber.models:update_models'
update_vehicles = 'lexgrabber.vehicles:update_vehicles'